k8s/nebula/apps/networking/envoy/manifests/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: &host external.garb.dev
  labels:
    type: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 10.96.69.21
    - type: IPAddress
      value: fded:687e:c3bf::21
  listeners:
    - name: http-root
      protocol: HTTP
      port: 80
      hostname: "skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: "skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "skylab.fi-tls"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "skylab.fi-tls"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  namespace: networking
  labels:
    type: internal
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 10.96.69.20
    - type: IPAddress
      value: fded:687e:c3bf::20
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.96.69.20,fded:687e:c3bf::20
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "skylab.fi-tls"
    - name: https-dh1
      protocol: HTTPS
      port: 443
      hostname: "*.dh.skylab.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "plex-dh-tls"
    - name: http-media
      port: 443
      protocol: HTTPS
      hostname: "*.media.skylab.fi"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "plex-dh-tls"
      allowedRoutes:
        namespaces:
          from: All
